@@ -67,7 +67,7 @@ It is not in interactive, i.e. comint-mode, as its bookkeepings seem linked to t
 	       (dotimes (_ 3) (unless (setq erg (py--fetch-result output-buffer limit))(sit-for 1 t)))
 	       (or (py--fetch-result output-buffer limit))
 	       (error "py-fast-send-string: py--fetch-result: no result")))))))
-  
+
 (defun py--fast-send-string-no-output (strg  &optional proc output-buffer result)
   (py-fast-send-string strg proc output-buffer result t))
 
@@ -84,8 +84,26 @@ Optional STRG PROC OUTPUT-BUFFER RETURN"
 			   proc
 			   output-buffer result))))
 
+(defun py-execute-buffer-fast (&optional shell dedicated split switch proc)
+  "Send accessible part of buffer to a Python interpreter.
+
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SPLIT: split buffers after executing
+Optional SWITCH: switch to output buffer after executing
+Optional PROC: select an already running process for executing"
+  (interactive)
+  (py-execute-buffer shell dedicated t split switch proc))
+
 (defalias 'py-process-region-fast 'py-execute-region-fast)
 (defun py-execute-region-fast (beg end &optional shell dedicated split switch proc)
+  "Send region to a Python interpreter.
+
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SPLIT: split buffers after executing
+Optional SWITCH: switch to output buffer after executing
+Optional PROC: select an already running process for executing"
   (interactive "r")
   (let ((py-fast-process-p t))
     (py-execute-region beg end shell dedicated t split switch proc)))
@@ -93,77 +111,121 @@ Optional STRG PROC OUTPUT-BUFFER RETURN"
 (defun py-execute-block-fast (&optional shell dedicated switch beg end file)
   "Process block at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'block shell dedicated switch beg end file t))
 
 (defun py-execute-block-or-clause-fast (&optional shell dedicated switch beg end file)
   "Process block-or-clause at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'block-or-clause shell dedicated switch beg end file t))
 
 (defun py-execute-class-fast (&optional shell dedicated switch beg end file)
   "Process class at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'class shell dedicated switch beg end file t))
 
 (defun py-execute-clause-fast (&optional shell dedicated switch beg end file)
   "Process clause at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'clause shell dedicated switch beg end file t))
 
 (defun py-execute-def-fast (&optional shell dedicated switch beg end file)
   "Process def at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'def shell dedicated switch beg end file t))
 
 (defun py-execute-def-or-class-fast (&optional shell dedicated switch beg end file)
   "Process def-or-class at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'def-or-class shell dedicated switch beg end file t))
 
 (defun py-execute-expression-fast (&optional shell dedicated switch beg end file)
   "Process expression at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'expression shell dedicated switch beg end file t))
 
 (defun py-execute-partial-expression-fast (&optional shell dedicated switch beg end file)
   "Process partial-expression at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'partial-expression shell dedicated switch beg end file t))
 
 (defun py-execute-section-fast (&optional shell dedicated switch beg end file)
   "Process section at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'section shell dedicated switch beg end file t))
 
 (defun py-execute-statement-fast (&optional shell dedicated switch beg end file)
   "Process statement at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'statement shell dedicated switch beg end file t))
 
 (defun py-execute-top-level-fast (&optional shell dedicated switch beg end file)
   "Process top-level at point by a Python interpreter.
 
-Output buffer not in comint-mode, displays \"Fast\"  by default"
+Output buffer not in comint-mode, displays \"Fast\"  by default
+Optional SHELL: Selecte a Python-shell(VERSION) as py-shell-name
+Optional DEDICATED: run in a dedicated process
+Optional SWITCH: switch to output buffer after executing
+Optional File: execute through running a temp-file"
   (interactive)
   (py--execute-prepare 'top-level shell dedicated switch beg end file t))
 
